# mesh-decimation

./: CMakeLists.txt  README.md  bootstrap.bat  build.bat  vcpkg.json
apps/: CMakeLists.txt  main.cpp
cmake/: deps.cmake
src/: CMakeLists.txt
src/application/: Application.cpp  Application.hpp  CMakeLists.txt
src/camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
src/obj-loader/: CMakeLists.txt  ObjectLoader.cpp  ObjectLoader.hpp
src/shaders/: main.glsl
src/shared/: PushConstants.inl
src/window/: CMakeLists.txt  Window.cpp  Window.hpp
